module(
    name = "tinydb",
    version = "1.0.0",
    compatibility_level = 1,
    repo_name = "tinydb",
)

bazel_dep(name = "rules_java", version = "8.11.0")
bazel_dep(name = "rules_jvm_external", version = "6.7")
bazel_dep(name = "rules_kotlin", version = "2.1.3")
bazel_dep(name = "protobuf", version = "31.0")

kotlin = use_extension("@rules_kotlin//kotlin:extensions.bzl", "kotlin")
kotlin.repositories()
use_repo(kotlin, "kotlin_repositories")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "main",
    artifacts = [
        "com.google.guava:guava:33.4.8-jre",
        "com.google.protobuf:protobuf-java:4.31.0",
        "org.apache.commons:commons-collections4:4.5.0",
        "org.jetbrains.kotlin:kotlin-stdlib:2.1.20",
        "org.jetbrains:annotations:26.0.2",
        "org.slf4j:slf4j-api:2.0.17",
        "org.slf4j:slf4j-simple:2.0.17",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "main")
