load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_binary")

kt_jvm_binary(
    name = "main_app",
    srcs = [
        "DBLock.kt",
        "MainApp.kt",
        "TinyDB.kt",
        "comparator/MemTableKeyComparator.kt",
        "config/Config.kt",
        "manifest/Manifest.kt",
        "memtable/MemTable.kt",
        "sstable/BloomFilterBuilder.kt",
        "sstable/BloomFilterReader.kt",
        "sstable/DataBlockReader.kt",
        "sstable/DataBlockWriter.kt",
        "sstable/Footer.kt",
        "sstable/IndexBlockBuilder.kt",
        "sstable/IndexBlockReader.kt",
        "sstable/MemTableKeyFunnel.kt",
        "sstable/MetaIndexBlockBuilder.kt",
        "sstable/MetaIndexBlockReader.kt",
        "sstable/SSTableReader.kt",
        "sstable/SSTableWriter.kt",
        "wal/BlockRecord.kt",
        "wal/WALogger.kt",
    ],
    main_class = "src.MainApp",
    deps = [
        "//src/proto:java_proto",
        "@main//:com_google_guava_guava",
        "@main//:com_google_protobuf_protobuf_java",
        "@main//:org_apache_commons_commons_collections4",
        "@main//:org_slf4j_slf4j_api",
        "@main//:org_slf4j_slf4j_simple",
    ],
)
