load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_test")

kt_jvm_test(
    name = "simple_operation_test",
    size = "medium",
    srcs = ["SimpleOperationTest.kt"],
    test_class = "test.SimpleOperationTest",
    deps = [
        "//src:main_app",
        "@test//:com_google_truth_truth",
        "@test//:junit_junit",
        "@test//:org_jetbrains_kotlin_kotlin_test",
    ],
)

kt_jvm_test(
    name = "compaction_trigger_test",
    size = "large",
    srcs = ["CompactionTriggerTest.kt"],
    test_class = "test.CompactionTriggerTest",
    deps = [
        "//src:main_app",
        "@test//:com_google_truth_truth",
        "@test//:junit_junit",
        "@test//:org_jetbrains_kotlin_kotlin_test",
    ],
)

kt_jvm_test(
    name = "wal_recovery_test",
    size = "large",
    srcs = ["WALRecoveryTest.kt"],
    test_class = "test.WALRecoveryTest",
    deps = [
        "//src:main_app",
        "@test//:com_google_truth_truth",
        "@test//:junit_junit",
        "@test//:org_jetbrains_kotlin_kotlin_test",
    ],
)

kt_jvm_test(
    name = "data_block_integration_test",
    size = "large",
    srcs = ["DataBlockIntegrationTest.kt"],
    test_class = "test.DataBlockIntegrationTest",
    deps = [
        "//src:main_app",
        "@test//:com_google_truth_truth",
        "@test//:junit_junit",
        "@test//:org_jetbrains_kotlin_kotlin_test",
    ],
)
