load("@protobuf//bazel:proto_library.bzl", "proto_library")
load("@protobuf//bazel:java_proto_library.bzl", "java_proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "user",
    srcs = [
        "user.proto",
    ],
)

java_proto_library(
    name = "user_proto",
    deps = [
        ":user",
    ],
)
