load("@protobuf//bazel:proto_library.bzl", "proto_library")
load("@protobuf//bazel:java_proto_library.bzl", "java_proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "proto",
    srcs = [
        "manifest.proto",
        "memtable.proto",
        "wal.proto",
    ],
)

java_proto_library(
    name = "java_proto",
    deps = [
        ":proto",
    ],
)
